# convex-rs-ffi

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
convex-ffi/: Cargo.toml  build.rs
convex-ffi/src/: lib.rs  lib.udl
templates/: PackageTemplate.swift
xtask/: Cargo.toml
xtask/src/: main.rs  swift.rs  utils.rs  workspace.rs
