[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
camino = "1.1"
clap = { version = "4.3", features = ["derive"] }
fs_extra = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uniffi_bindgen = { workspace = true }
xshell = { version = "0.2" }
